temporarily avoiding using the script

--- a/tasks/direct_task_test.yml
+++ b/tasks/direct_task_test.yml
@@ -6,8 +6,8 @@ image_resource:
   type: docker-image
   source: {repository: busybox}
 
-inputs:
-- name: concourse_test_repo
+#inputs:
+#- name: concourse_test_repo
 
 run:
   path: echo
