--- a/tasks/test_task.yml
+++ b/tasks/test_task.yml
@@ -10,6 +10,7 @@ inputs:
 - name: concourse_test_repo
 
 run:
-  path: concourse_test_repo/scripts/test_scriptdsad.sh
+  path: concourse_test_repo/scripts/test_script.sh
+  args: [hello world]
   #path: echo
   #args: [hello world]
