--- a/tasks/test_task.yml
+++ b/tasks/test_task.yml
@@ -10,6 +10,8 @@ inputs:
 - name: concourse_test_repo
 
 run:
-  path: concourse_test_repo/scripts/test_script.sh
+  path: python
+  path: concourse_test_repo/scripts/test_python.py
+  #path: concourse_test_repo/scripts/test_script.sh
   #path: echo
   #args: [hello world]
