--- a/tasks/test_task.yml
+++ b/tasks/test_task.yml
@@ -4,15 +4,15 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
+  #source: {repository: busybox}
+  source: python
 
 inputs:
 - name: concourse_test_repo
 
 run:
-  path: bash
-  args: [concourse_test_repo/scripts/test_script.sh]
-  #args: [concourse_test_repo/scripts/test_python.py]
+  path: python
+  args: [concourse_test_repo/scripts/test_python.py]
   #path: concourse_test_repo/scripts/test_script.sh
   #path: echo
   #args: [hello world]
