--- a/tasks/test_task.yml
+++ b/tasks/test_task.yml
@@ -5,7 +5,7 @@ platform: linux
 image_resource:
   type: docker-image
   #source: {repository: busybox}
-  source: python
+  source: {repository: python}
 
 inputs:
 - name: concourse_test_repo
