--- a/tasks/test_bash.yml
+++ b/tasks/test_bash.yml
@@ -4,8 +4,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
-  #source: {repository: python}
+  source: {repository: python}
 
 inputs:
 - name: concourse_test_repo
