--- a/tasks/test_bash.yml
+++ b/tasks/test_bash.yml
@@ -4,7 +4,9 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: python}
+  #source: {repository: python}
+  source:
+    repository: hello_world
 
 inputs:
 - name: concourse_test_repo
